# console_debugger

./: .gitignore  README.md  __init__.py  coloring_text.py  date_obj.py  debugger.py  main.py  pyproject.toml  setting_socket.json  template_obj.py  templates.py
console_debugger/: path_helper.py
console_debugger/helpful/: coloring_text.py  date_obj.py
console_debugger/tui/: __init__.py  urw_widget.py  urwid_terminal.py
gui/: __init__.py  main.cmd  main.py  main.pyw  tk_terminal.py
gui/build_exe/: assemble.bat  main.cmd
gui/logic_gui/: console_urwid.py  mg_get_socket.py  view_terminal.py
helpful/: __init__.py  coloring_text.py  date_obj.py  path_helper.py  stup_debugger.py  template_obj.py  templates.py
logic/: __init__.py  coloring_text.py  debugger.py  mg_get_socket.py  mg_send_socket.py  stup_debugger.py  templates.py
logic/gui/: __init__.py  view_terminal.py
logic/test/: test_deb.py
logic/tk_gui/: config.txt  view_terminal.py
test/: test_deb.py  test_socket.py
tk_gui/: view_terminal.py
tui/: __init__.py  main.py  urw_widget.py  urwid_terminal.py
