[tool.poetry]
name = "console_debugger"
version = "0.0.1"
description = "Многоконсольнйы Отладчик"
repository = "https://github.com/denisxab/console_debugger.git"
documentation = "https://console_debugger.readthedocs.io/ru/latest/index.html"
authors = ["Denis Kustov <denis-kustov@rambler.ru>"]
readme = "README.md"
exclude = [
    "console_debugger/.idea",
    "console_debugger/venv",
    "console_debugger/.git",
    "console_debugger/.gitignore",
    "console_debugger/test",
    "console_debugger/Makefile"
]

[tool.poetry.dependencies]
python = "^3.10"
urwid = "2.1.2"


[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
Nuitka = "^0.6.19"
Sphinx = "^4.4.0"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.0.0"
m2r2 = "^0.3.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"